--- a/trial.html
+++ b/trial.html
@@ -216,51 +216,74 @@ tr:last-child td {
 
 
 
-  @media print {
+
+/* ================== PRINT SAFETY (UNCHANGED) ================== */
+@media print {
+  table { page-break-inside:auto }
+  tr { page-break-inside:avoid; page-break-after:auto }
+  thead { display:table-header-group }
+  tfoot { display:table-footer-group }
+}
+
+/* Prevents cut-off look */
+.learner-card {
+  overflow: visible !important;
+  height: auto !important;
+}
+
+table {
+  page-break-inside: avoid;
+}
+
+ 
+
+
+/* ================= DETAILED REPORT PDF FIX ================= */
+@media print {
 
   html, body {
     width: 210mm !important;
+    height: auto !important;
     margin: 0 !important;
     padding: 0 !important;
     background: white !important;
   }
 
-  /* Each learner starts a new page */
+  /* Ensure A4 container fits printable area */
   .a4-page {
     width: 190mm !important;
     max-width: 190mm !important;
+    min-height: auto !important;
+    max-height: 277mm !important;   /* A4 safe printable height */
     margin: 0 auto !important;
     padding: 10mm !important;
     box-sizing: border-box !important;
-    page-break-after: always; 
-    /* remove overflow & max-height to prevent cutting content */
+    page-break-after: always;
+    overflow: hidden !important;
   }
 
-  /* Prevent cut-offs inside the learner card */
+  /* Prevent content pushing outside page */
   .learner-card {
     overflow: visible !important;
     height: auto !important;
-    page-break-inside: avoid !important;
   }
 
-  /* Tables should stay intact */
+  /* Keep tables inside page width */
   table {
     width: 100% !important;
     table-layout: fixed !important;
     word-break: break-word !important;
-    page-break-inside: avoid !important;
   }
 
-  tr {
-    page-break-inside: avoid !important;
+  th, td {
+    white-space: normal !important;
+    word-wrap: break-word !important;
+    font-size: 12px !important;
   }
 
-  thead { display: table-header-group !important; }
-  tfoot { display: table-footer-group !important; }
-
-  h3, h4, h5, p, ul, li {
-    page-break-inside: avoid !important;
-    margin-top: 4px !important;
+  /* Reduce spacing slightly for print */
+  h3, h4, h5 {
+    margin-top: 6px !important;
     margin-bottom: 4px !important;
   }
 
@@ -269,15 +292,11 @@ tr:last-child td {
     padding-top: 6px !important;
   }
 
-  @page {
-    size: A4;
-    margin: 15mm 10mm 15mm 10mm;
-  }
-
 }
 
 
 
+  
 
 /* Allow the main container to split naturally */
 .school-analytics {
@@ -311,7 +330,19 @@ tr:last-child td {
 
 
 
-  
+ @media print {
+  .learner-page {
+    page-break-before: always; /* ensure each learner starts fresh */
+    page-break-after: always;  /* keep each learner on its own page */
+  }
+
+  /* Prevent tables or charts inside from splitting */
+  .subject-block, table, .table-wrapper, .trend-box {
+    page-break-inside: avoid;
+    break-inside: avoid;
+  }
+}
+
 </style>
 
 
