--- a/trial.html
+++ b/trial.html
@@ -259,7 +259,7 @@ table {
   }
 
   /* Ensure A4 container fits printable area */
-   .a4-page:not(:last-child) {
+   .a4-page {
     width: 190mm !important;
     max-width: 190mm !important;
     min-height: auto !important;
