--- a/trial.html
+++ b/trial.html
@@ -1765,7 +1765,8 @@ window.downloadDetailedPDF = async function () {
     return;
   }
 
- 
+ window.__EXPORTING_PDF__ = true;
+
 
   const term = termSelect.options[termSelect.selectedIndex]?.text || "Term";
   const filename = `Detailed_Report_${term}_${SYSTEM_YEAR}.pdf`;
@@ -1823,13 +1824,14 @@ const clone = original.cloneNode(true);
     before: '.a4-page'
   }
 }).from(clone).save();
-
-
-}).from(clone).save();
+window.__EXPORTING_PDF__ = false;
 
 
 };
 
+
+
+  
 
   window.downloadSchoolAnalyticsPDF = async function () {
 
