--- a/trial.html
+++ b/trial.html
@@ -838,6 +838,10 @@ ${intelligence.schoolImprovement !== null ? `
         <li>Organize teacher review meetings for declining performance trends.</li>
         <li>Introduce peer tutoring and reward high-performing classes</li>
  
+          <li>Conduct targeted remediation for subjects below 2.3 mean.</li>
+        <li>Organize teacher review meetings for declining performance trends.</li>
+        <li>Introduce peer tutoring and reward high-performing classes</li>
+ 
         
       </ul>
 
