--- a/trial.html
+++ b/trial.html
@@ -311,7 +311,7 @@ table {
   <button onclick="downloadPDF()">
     ⬇️ Download Summary Report<br>
     <small>Recommended for parents & learners</small>
-  </button><br><br>
+  </button>
 
  
 
