--- a/trial.html
+++ b/trial.html
@@ -311,7 +311,7 @@ table {
   <button onclick="downloadPDF()">
     ⬇️ Download Summary Report<br>
     <small>Recommended for parents & learners</small>
-  </button>
+  </button><br>
 
  
 
@@ -838,10 +838,7 @@ ${intelligence.schoolImprovement !== null ? `
         <li>Organize teacher review meetings for declining performance trends.</li>
         <li>Introduce peer tutoring and reward high-performing classes</li>
  
-          <li>Conduct targeted remediation for subjects below 2.3 mean.</li>
-        <li>Organize teacher review meetings for declining performance trends.</li>
-        <li>Introduce peer tutoring and reward high-performing classes</li>
- 
+         
         
       </ul>
 
