--- a/trial.html
+++ b/trial.html
@@ -307,19 +307,16 @@ table {
 <p id="status"></p>
 <hr />
 
-<div class="actions-box">
-  <button onclick="downloadPDF()">
+<div class="actions-box" style="display: flex; gap: 12px; flex-wrap: wrap;">
+  <button onclick="downloadPDF()" style="flex: 1;">
     ⬇️ Download Summary Report<br>
     <small>Recommended for parents & learners</small>
-  </button><br>
+  </button>
 
- 
-
-  <button onclick="downloadSchoolAnalyticsPDF()">
-  ⬇️ Download School Analysis Report<br>
-  <small>For school leadership & QA</small>
-</button>
-
+  <button onclick="downloadSchoolAnalyticsPDF()" style="flex: 1;">
+    ⬇️ Download School Analysis Report<br>
+    <small>For school leadership & QA</small>
+  </button>
 </div>
 
   
