--- a/reports.html
+++ b/reports.html
@@ -309,7 +309,7 @@ table {
 
 <div class="actions-box" style="display: flex; gap: 12px; flex-wrap: wrap;">
   <button onclick="downloadPDF()" style="flex: 1;">
-    ⬇️ Download Summary Report<br>
+    ⬇️ Download Report Forms<br>
     <small>Recommended for parents & learners</small>
   </button>
 
