--- a/teacher-term-preview.html
+++ b/teacher-term-preview.html
@@ -299,7 +299,7 @@ table {
 <label>View As</label><br />
 <select id="viewMode">
   <option value="term">Term Results</option>
-  <option value="student">Student (Admission No)</option>
+  <option value="student">Student (Admission No/UPI No</option>
   <option value="subject">Subject</option>
 </select><br /><br />
 
