--- a/teacher.html
+++ b/teacher.html
@@ -95,7 +95,7 @@
     localStorage.setItem("class_id", classId);
     localStorage.setItem("academic_year", academicYear);
 
-    window.location.href = "new-assessment.html";
+    window.location.href = "assessment-students.html";
   });
 </script>
 
