--- a/assessment-students.html
+++ b/assessment-students.html
@@ -88,7 +88,7 @@
     localStorage.setItem("selected_students", JSON.stringify(selected));
 
     /* ✅ Academic year is already locked and carried */
-    window.location.href = "assessment-competencies.html";
+    window.location.href = "new-assessment.html";
   };
 </script>
 
