--- a/new-assessment.html
+++ b/new-assessment.html
@@ -162,7 +162,7 @@ const storedYear = localStorage.getItem("academic_year");
     }
 
     localStorage.setItem("assessment_id", data.id);
-    window.location.href = "assessment-students.html";
+    window.location.href = "assessment-competencies.html";
   };
 </script>
 
